# ChimeraX-Gamepad

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please.config.json
.launch/: prelaunch.sh
src/: __init__.py  tool.py
src/cmd/: __init__.py  cmd.py
src/core/: __init__.py  actions.py  config.py  controller.py  gamepad.py
src/ui/: settings.py
